i18n and response handler setup and add a languageMiddleware
